test/parsing/vass/wrong-escapes-2.good
wrong-escapes-2.chpl:3: error: syntax error near 'DONE'
wrong-escapes-2.chpl:3: error: end-of-line in a string literal without a preceding backslash
wrong-escapes-2.chpl:3: error: end-of-file in string literal
